--- a/style.css
+++ b/style.css
@@ -89,37 +89,37 @@ body{
   }
 
 .about-block{
-  margin-bottom: 150px;
+  margin-bottom: 100px;
   width: 100%;
+  height: fit-content;
   position: relative;
-    /* background-color: var(--primary); */
-    /* transform: translateY(-200px); */
+  display: flex;
+  justify-content: center;
+
 }
 .about-background{
+    position: absolute;
+    z-index: -1;
     transform-origin: 0; 
     transform: skewY(-10deg);
     background-color: var(--primary);
-    min-height: 600px;
-    max-width: 100%;
+    min-height: 650px;
+    width: 100%;
     box-shadow: var(--shadow);
 }
 
 .about-content{
-   transform: translateX(10deg);
     padding: 60px 60px 0px 60px;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translate(-50%);
     max-width: 1200px;
     display: flex;
+    justify-content: center;
+    flex-grow: 1;
 }
 
 .about-info{
     text-align: left;
     min-height: 300px;
-    min-width: 480px;
-    max-width: 600px;
+    max-width: 700px;
     margin: 50px 0px 50px 0px;
     padding: 25px 25px 10px 15px;
     background-color: var(--white);
@@ -127,6 +127,7 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    flex-grow: 1;
 }
 .info-header{
   font-size: 2.2rem;
@@ -145,7 +146,7 @@ body{
 }
 .person-img{
     min-height: 500px;
-    max-width: 600px;
+    max-width: 500px;
     object-fit: cover;
     box-shadow: var(--shadow);
 }
@@ -167,7 +168,6 @@ body{
 main{
   display: flex;
   flex-direction: column;
-  justify-content: center;
   max-width: 1200px;
   padding: 40px 60px 0px 60px;
   margin-bottom: 80px;
@@ -181,21 +181,21 @@ main{
 .content-container{
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: center; */
+  justify-content: center;
   /* align-items: center; */
   justify-content: space-between;
-  gap: 15px;
+  gap: 25px;
 }
 .card{
   display: flex;
   flex-direction: column;
   box-shadow: var(--shadow);
   min-height: 350px;
-  max-width: 350px;
+  max-width: 340px;
 }
 .card-img{
   max-height: 250px;
-  max-width: 350px;
+  max-width: 100%;
   object-fit: cover;
 }
 .card-info{
@@ -223,12 +223,16 @@ height: 1.4rem;
 footer{
   width: 100%;
   display: flex;
-  flex-wrap: wrap;
   justify-content: center;
-  gap: 50px;
-  /* align-items: center; */
   color: var(--white);
   background-color: var(--primary);
+}
+.footer-content{
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 100px;
   padding: 60px 50px;
 }
 .footer-header{
@@ -239,11 +243,11 @@ footer{
 .footer-img{
   object-fit: cover;
   min-height: 350px;
-  max-width: 600px;
+  max-width: 500px;
 }
 .footer-info{
   text-align: left;
-  max-width: 420px;
+  max-width: 530px;
 }
 .footer-info p{
   font-size: 1.2rem;
@@ -265,4 +269,171 @@ footer{
 }
 .phone-info img, .mail-info img{
   filter: invert(1);
+}
+
+@media (min-width: 2560px){
+  .about-background{
+    min-height: 750px;
+}
+}
+@media (max-width: 1280px){
+  .about-block{
+    margin-bottom: 50px;
+  }
+  .about-background{
+    min-height: 510px;
+}
+  .about-content{
+      max-width: 900px;
+      padding: 60px 20px 0px 20px;
+  }
+  .about-info{
+    max-width: 500px;
+  }
+  .person-img{
+      min-height: 400px;
+      max-width: 400px;
+  }
+  main{
+      max-width: 900px;
+      padding: 40px 20px 0px 20px;
+    }
+  .card{
+  min-height: 200px;
+  max-width: 270px;
+}
+.card-img{
+  max-height: 200px;
+}
+.footer-content{
+gap: 40px;
+max-width: 900px;
+padding: 40px 20px;
+}
+.footer-img{
+  max-width: 500px;
+}
+.footer-info{
+  max-width: 320px;
+}
+  }
+
+@media (max-width: 900px){
+.about-block{
+    margin-bottom: 30px;
+  }
+  .person-header {
+    font-size: 3.5rem;
+    text-align: right;
+    top: 0;
+    transform: translate(160px, -100px);
+}
+  .about-background{
+    min-height: 400px;
+}
+  .about-content{
+      max-width: 530px;
+      margin-left: 75px;
+  }
+  .about-info{
+    display: block;
+  }
+  .about-visual{
+    float: left;
+  }
+  .person-img{
+      min-height: 400px;
+      max-width: 400px;
+      margin: -120px 20px 0px -90px;
+  }
+
+  main{
+      max-width: 600px;
+    }
+  .card{
+  max-width: 265px;
+}
+.footer-content{
+gap: 50px;
+max-width: 600px;
+}
+.footer-img{
+  max-width: 250px;
+}
+.footer-info{
+  max-width: 250px;
+}
+}
+
+
+@media (max-width: 600px){
+  .about-content{
+    flex-direction: column;
+    align-items: center;
+    padding: 20px 0px 0px 0px;
+  }
+
+  .person-header{
+    line-height: 1;
+    font-size: 4rem;
+    top: 50px;
+    bottom: 0;
+    right: 50px;
+    width: 50%;
+  }
+  .person-img{
+    max-width: 300px;
+  }
+  .info-header{
+    text-align: center;
+  }
+  .about-info{
+    align-items: center;
+    max-width: 550px;
+    box-shadow: none;
+    margin: 0px;
+  }
+  .info-header, .main-header{
+    margin-bottom: 5px;
+  }
+  .info-para{
+    margin-bottom: 15px;
+  }
+main{
+  align-items: center;
+  max-width: 550px;
+  padding: 0px 20px 0px 20px;
+}
+.content-container{
+  flex-grow: 1;
+  width: 100%;
+}
+.card{
+  max-width: 550px;
+}
+.card-img{
+  max-height: 300px;
+}
+.content-container{
+  align-items: center;
+  justify-content: center;
+}
+.footer-header{
+  text-align: center;
+}
+.footer-content{
+  padding: 0px 0px 50px 0px;
+  flex-direction: column-reverse;
+  align-items: center;
+}
+.footer-img{
+  max-width: 100%;
+}
+.footer-icons{
+  justify-content: center;
+}
+.footer-info{
+  max-width: 550px;
+  padding: 0px 20px 0px 20px;
+}
 }
