Remake desktop and mobile layout

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ img.svg {
     Arial, system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif,
     "Segoe UI Symbol";
   font-size: 14px;
-  --primary: rgb(171, 123, 249);
+  --primary: #277691;
   --white: white;
   --black: black;
    --shadow-color: 0deg 0% 69%;
@@ -73,6 +73,13 @@ img.svg {
     0.8px 1.5px 1.9px -0.8px hsl(var(--shadow-color) / 0.29),
     1.9px 3.7px 4.7px -1.7px hsl(var(--shadow-color) / 0.29),
     4.5px 9.1px 11.4px -2.5px hsl(var(--shadow-color) / 0.29);
+
+  --img-shadow-color: 0deg 0% 40%;
+  --img-shadow:
+    0.3px 0.5px 0.7px hsl(var(--img-shadow-color) / 0.36),
+    0.8px 1.6px 2px -0.8px hsl(var(--img-shadow-color) / 0.36),
+    2.1px 4.1px 5.2px -1.7px hsl(var(--img-shadow-color) / 0.36),
+    5px 8px 10.6px -2.5px hsl(var(--img-shadow-color) / 0.36);
 }
 img.svg{
     width: 26px;
@@ -109,7 +116,7 @@ body{
 }
 
 .about-content{
-    padding: 60px 60px 0px 60px;
+    padding: 40px 60px 0px 60px;
     max-width: 1200px;
     display: flex;
     justify-content: center;
@@ -119,15 +126,18 @@ body{
 .about-info{
     text-align: left;
     min-height: 300px;
-    max-width: 700px;
-    margin: 50px 0px 50px 0px;
-    padding: 25px 25px 10px 15px;
-    background-color: var(--white);
-    box-shadow: var(--shadow);
+    max-width: 100%;
+    background-color: transparent;
+    box-shadow: none;
     display: flex;
-    flex-direction: column;
     justify-content: space-between;
     flex-grow: 1;
+}
+.about-text{
+  margin: 50px 0px 50px 0px;
+  box-shadow: var(--shadow);
+  background-color: var(--white);
+  padding: 25px 25px 15px 25px;
 }
 .info-header{
   font-size: 2.2rem;
@@ -142,13 +152,13 @@ body{
   align-items: center;
   gap:15px;
   justify-content: right;
-  margin-bottom: 15px;
+  margin-top: 120px;
 }
 .person-img{
     min-height: 500px;
     max-width: 500px;
     object-fit: cover;
-    box-shadow: var(--shadow);
+    box-shadow: var(--img-shadow);
 }
 
 .about-visual{
@@ -170,7 +180,7 @@ main{
   flex-direction: column;
   max-width: 1200px;
   padding: 40px 60px 0px 60px;
-  margin-bottom: 80px;
+  margin-bottom: 120px;
 }
 .main-header{
   font-size: 2.1rem;
@@ -182,7 +192,6 @@ main{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  /* align-items: center; */
   justify-content: space-between;
   gap: 25px;
 }
@@ -285,13 +294,13 @@ footer{
 }
   .about-content{
       max-width: 900px;
-      padding: 60px 20px 0px 20px;
+      padding: 40px 20px 0px 20px;
   }
-  .about-info{
-    max-width: 500px;
-  }
+.header-icons{
+  margin-top: 20px;
+}
   .person-img{
-      min-height: 400px;
+      min-height: 450px;
       max-width: 400px;
   }
   main{
@@ -319,6 +328,12 @@ padding: 40px 20px;
   }
 
 @media (max-width: 900px){
+  main{
+    padding-top: 0px;
+  }
+  .header-icons{
+    display: none;
+  }
 .about-block{
     margin-bottom: 30px;
   }
@@ -326,17 +341,26 @@ padding: 40px 20px;
     font-size: 3.5rem;
     text-align: right;
     top: 0;
-    transform: translate(160px, -100px);
+    transform: translate(155px, -100px);
 }
-  .about-background{
-    min-height: 400px;
-}
+
   .about-content{
       max-width: 530px;
       margin-left: 75px;
+      padding-top: 80px;
   }
   .about-info{
+    background-color: var(--white);
     display: block;
+    margin: 50px 0px 50px 0px;
+    padding: 25px 25px 15px 25px;
+    box-shadow: var(--shadow);
+  }
+    .about-text{
+    box-shadow: none;
+    padding: 0px;
+    margin: 0px;
+    padding-bottom: 40px;
   }
   .about-visual{
     float: left;
@@ -367,31 +391,49 @@ max-width: 600px;
 
 
 @media (max-width: 600px){
+    .about-background{
+    min-height: 400px;
+}
+  .header-icons{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+  }
   .about-content{
     flex-direction: column;
     align-items: center;
-    padding: 20px 0px 0px 0px;
+    padding: 0px;
+    margin: 0px;
   }
 
   .person-header{
+    text-align: left;
     line-height: 1;
     font-size: 4rem;
-    top: 50px;
+    transform: translate(10px, 280px);
     bottom: 0;
-    right: 50px;
-    width: 50%;
   }
   .person-img{
     max-width: 300px;
+    margin: 0px 0px 20px 0px;
   }
   .info-header{
     text-align: center;
   }
+
   .about-info{
+    padding: 20px;
+    background-color: transparent;
+    display: flex;
+    flex-direction: column;
     align-items: center;
     max-width: 550px;
     box-shadow: none;
     margin: 0px;
+  }
+  .about-text{
+    box-shadow: none;
+    padding: 0px;
   }
   .info-header, .main-header{
     margin-bottom: 5px;
@@ -402,7 +444,7 @@ max-width: 600px;
 main{
   align-items: center;
   max-width: 550px;
-  padding: 0px 20px 0px 20px;
+  padding: 40px 20px 0px 20px;
 }
 .content-container{
   flex-grow: 1;
@@ -412,7 +454,7 @@ main{
   max-width: 550px;
 }
 .card-img{
-  max-height: 300px;
+  max-height: 280px;
 }
 .content-container{
   align-items: center;
